Add a basic test (#43)
Start setting up the testing APIs.